--- a/_tools_center.scss
+++ b/_tools_center.scss
@@ -1,13 +1,13 @@
-.btn-default {
+a.btn.btn-default {
     background-image:   none                            !important;
     border:             1px solid                       !important;
 }
 
-.btn-danger {
+a.btn.btn-danger {
     background-image:   none                            !important;
     border:             1px solid                       !important;
 }
 
-.btn-danger:hover {
+a.btn.btn-danger:hover {
     border:             1px solid                       !important;
 }
